layout issue solved

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,15 @@
+.app{
+  height: 100vh;
+  position: relative;
+}
+
+.container{
+  position: absolute;
+  bottom: 1%;
+  left: 1%;
+  right: 1%;
+}
+
 .column-3 {
   width: 75%;
   float: left;
